--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/ClusterMax/ds1g3-backend#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "google-auth-library": "^8.8.0",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0"
   },
   "devDependencies": {
