--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.18.2",
     "google-auth-library": "^8.8.0",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "sequelize": "^6.32.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
