--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "google-auth-library": "^8.8.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
     "pg": "^8.11.0",
     "sequelize": "^6.32.0",
     "sharp": "^0.32.1"
