--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon server.js",
     "init": "sequelize-cli init",
@@ -22,6 +23,8 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dockerode": "^4.0.9",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "google-auth-library": "^8.8.0",
